# unitpackage

./: .gitignore  .pylintrc  ChangeLog  README.md  conftest.py  environment.yml  pyproject.toml  rever.xsh  setup.py  zenodo.json
.github/: pull_request_template.md
.github/workflows/: doc.yml  lint.yml  test.yml
binder/: environment.yml  postBuild  requirements.txt
binder/labconfig/: default_setting_overrides.json
doc/: Makefile  README.md  api.md  conf.py  environment.yml  index.md  installation.md  robots.txt
doc/api/: collection.md  config.md  cv_database.md  cv_descriptor.md  cv_entry.md  database.md  descriptor.md  entry.md  local.md  metadata.md  remote.md
doc/api/cv/: cv_database.md  cv_entry.md
doc/api/database/: echemdb.md
doc/api/electrochemistry/: reference_electrode.md  reference_electrodes.md
doc/api/eln/: elabftw.md  elabftw_cli.md  kadi.md  kadi_cli.md
doc/api/loaders/: column_names.md
doc/files/: demo_package.csv  demo_package.csv.yaml  demo_package.json  demo_package_cv.json  demo_package_metadata.csv  demo_package_metadata.json
doc/news/: TEMPLATE copy.rst  TEMPLATE.rst  add_column.rst  adopt-mds.rst  api-links.rst  apply-scaling-factor.rst  astropy.rst  bib-descriptor.rst  bibliography-docu.rst  bibliography.rst  binder.rst  binder2.rst  camel-case.rst  citation-style.rst  cmd.rst  collection_package.rst  depdencies.rst  describe-perfromance.rst  describe.rst  docu_v0.7.0.rst  echemdb-coll-entry.rst  entry_to_resource.rst  field-handling.rst  fis-sorting-collection.rst  fix-dialect.rst  fix-reference-calculation.rst  fix_save_package.rst  frictionless5.rst  from_df.rst  from_loaders.rst  from_local_errors.rst  identifier-list.rst  index.rst  installation2.rst  linkchecker-errors.rst  load-metadata.rst  loaders.rst  metadata-cli-defaults.rst  metadata-io-issues.rst  modify_field_names.rst  (+38 more)
doc/usage/: bibliography.md  collection_interactions.md  create_unitpackage.md  create_unitpackages.md  database_interactions.md  echemdb_usage.md  elabftw.md  eln.md  entry_interactions.md  kadi.md  load_and_save.md  loaders.md  local_collection.md  local_database.md  unitpackage.md  unitpackage_usage.md
docs/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: api.md.txt  index.md.txt  installation.md.txt
docs/_sources/api/: baseloader.md.txt  descriptor.md.txt  entrypoint.md.txt  local.md.txt  remote.md.txt
docs/_sources/api/database/: echemdb.md.txt  echemdb_entry.md.txt
docs/_sources/api/loaders/: eclab_fields.md.txt  eclabloader.md.txt  gamryloader.md.txt
docs/_sources/usage/: create_unitpackage.md.txt  echemdb_usage.md.txt  load_and_save.md.txt  loaders.md.txt  unitpackage.md.txt  unitpackage_usage.md.txt
docs/_static/: documentation_options.js
docs/api/: baseloader.html  collection.html  descriptor.html  eclabloader.html  entry.html  entrypoint.html  gamryloader.html  local.html  metadata.html  remote.html
docs/api/cv/: cv_collection.html  cv_entry.html
docs/api/database/: echemdb.html  echemdb_entry.html
docs/api/electrochemistry/: reference_electrode.html
docs/api/loaders/: baseloader.html  eclab_fields.html  eclabloader.html  gamryloader.html
docs/usage/: create_unitpackage.html  echemdb_usage.html  load_and_save.html  loaders.html  local_collection.html  unitpackage.html  unitpackage_usage.html
echemdb/: database.py  descriptor.py  entry.py  local.py  remote.py
echemdb/cv/: cv_database.py  cv_entry.py  cvdatabase.py  cventry.py  database.py  descriptor.py  entry.py
examples/alves_2011_electrochemistry_6010/: alves_2011_electrochemistry_6010_f1a_solid.csv  alves_2011_electrochemistry_6010_f1a_solid.yaml
examples/duplicates/: duplicate.csv  duplicate.json
examples/engstfeld_2018_polycrystalline_17743/: engstfeld_2018_polycrystalline_17743_f4b_1.json  engstfeld_2018_polycrystalline_17743_f4b_1.yaml
examples/from_csv/: UpperCase.csv  from_csv.csv.yaml  from_csv_multiple_headers.csv  from_csv_units.csv.yaml
examples/local/alves_2011_electrochemistry_6010/: alves_2011_electrochemistry_6010_f1a_solid.json
examples/local/engstfeld_2018_polycrystalline_17743/: engstfeld_2018_polycrystalline_17743_f4b_1.csv  engstfeld_2018_polycrystalline_17743_f4b_1.json
examples/local/no_bibliography/: no_bibliography.json
examples/no_bibliography/: no_bibliography.json  no_bibliography.yaml
test/: conftest.py  fixture_loader.py  record_fixtures.py  test_elabftw.py  test_kadi.py
test/eln-fixtures/elabftw/5.5.14/: info.json  list_get_entity.json  list_list_entities.json  list_list_uploads.json  manifest.json  patch_metadata.json  post_entity.json  post_upload_csv.json
test/eln-fixtures/kadi/1.10.0/: add_metadatum_datapackage.json  create_record.json  download_csv.json  (+7 more)
test/loader_data/: default.csv  default.json.expected  eclab_ca.csv.expected  eclab_ca.json.expected  eclab_ca.mpt  eclab_ca.mpt.metadata  eclab_cv.csv.expected  eclab_cv.json.expected  eclab_cv.mpt  eclab_cv.mpt.metadata  gamry_cv.DTA  gamry_cv.DTA.metadata  gamry_cv.csv.expected  gamry_cv.json.expected  unit.csv  unit.csv.metadata  unit.json.expected
unitpackage/: __init__.py  collection.py  config.py  database.py  descriptor.py  entry.py  entrypoint.py  local.py  metadata.py  remote.py
unitpackage/cv/: cv_collection.py  cv_database.py  cv_entry.py
unitpackage/database/: echemdb.py  echemdb_entry.py
unitpackage/electrochemistry/: reference_electrode.py  reference_electrode_data.py  reference_electrodes.py
unitpackage/eln/: __init__.py  _base.py  _cli.py  _config_cli.py  elabftw.py  elabftw_cli.py  elabftw_config_cli.py  kadi.py  kadi_cli.py
unitpackage/loaders/: baseloader.py  column_names.py  eclab_fields.py  eclabloader.py  gamryloader.py
unitpackage/test/: cli.py
unitpackage/test/elabftw/: fixture_loader.py  record_fixtures.py  test_config.py  test_config_cli.py  test_elabftw.py
unitpackage/test/eln/: conftest.py  fixture_loader.py  record_fixtures.py  test_cli_commands.py  test_config.py  test_config_cli.py  test_elabftw.py  test_kadi.py
(+28 files in other folders)
