[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "unitpackage"
version = "0.8.5"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "a Python library to interact with a collection of frictionless datapackages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astropy>=5,<=7",
    "filelock>=3,<4",
    "frictionless>=5.8.3,<6",
    "matplotlib>=3.5.0,<4",
    "pandas>=1.3,<3",
    "plotly>=5,<6",
    "pybtex>=0.24,<0.25",
]

[tool.setuptools]
packages = [
    "unitpackage",
    "unitpackage.cv",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

[tool.pixi.environments]
python-39 = ["test", "python-39"]
python-310 = ["test", "python-310"]
python-311 = ["test", "python-311"]
python-312 = ["test", "python-312"]
dev = ["dev", "doc", "test", "lint"]

[tool.pixi.dependencies]
astropy = "*"
frictionless = "*"
matplotlib-base = "*"
pandas = "*"
pybtex = "*"
python = "*"

[tool.pixi.pypi-dependencies]
unitpackage = { path = ".", editable = true }

[tool.pixi.feature.python-39.dependencies]
python = "3.9"

[tool.pixi.feature.python-310.dependencies]
python = "3.10"

[tool.pixi.feature.python-311.dependencies]
python = "3.11"

[tool.pixi.feature.python-312.dependencies]
python = "3.12"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-doctestplus = "*"
pytest-remotedata = "*"

[tool.pixi.feature.test.tasks]
doctest = "pytest -n auto --doctest-modules unitpackage"

[tool.pixi.feature.lint.dependencies]
black = ">=23,<24"
isort = "*"
pylint = ">=3,<3.1"

[tool.pixi.feature.lint.tasks]
pylint = "pylint unitpackage"
black = "black unitpackage"
isort = "isort --profile black unitpackage"
lint = { depends-on = ["pylint", "black", "isort"] }

[tool.pixi.feature.doc.dependencies]
jupytext = "*"
linkchecker = "*"
myst-parser = "*"
myst-nb = "*"
sphinx = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-W -n --keep-going'"

[tool.pixi.feature.dev.dependencies]
pip = "*"
conda = "*"
