[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "unitpackage"
version = "0.12.0"
license = "GPL-3.0-or-later"
description = "a Python library to interact with a collection of frictionless datapackages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=5,<8",
    "click>=8,<9",
    "frictionless>=5.8.3,<6",
    "matplotlib>=3.5.0,<4",
    "pandas>=1.3,<3",
    "plotly>=5,<7",
    "pybtex>=0.25,<0.26",
]

[project.scripts]
unitpackage = "unitpackage.entrypoint:cli"

[tool.setuptools]
packages = [
    "unitpackage",
    "unitpackage.database",
    "unitpackage.electrochemistry",
    "unitpackage.loaders",
    "unitpackage.test",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.environments]
python-310 = ["test", "python-310"]
python-311 = ["test", "python-311"]
python-312 = ["test", "python-312"]
python-313 = ["test", "python-313"]
python-314 = ["test", "python-314"]
dev = ["dev", "test", "lint"]
doc = ["doc"]
release = ["release"]

[tool.pixi.dependencies]
astropy = "*"
frictionless = "*"
matplotlib-base = "*"
pandas = "*"
pybtex = "*"
python = "*"
pixi-kernel = ">=0.6.1,<0.7"
ipykernel = ">=6.29.5,<7"
pip = ">=25.0,<26"
jupyterlab = ">=4.3.4,<5"
jupytext = ">=1.16.6,<2"

[tool.pixi.tasks]
unitpackage = "unitpackage"

[tool.pixi.pypi-dependencies]
unitpackage = { path = ".", editable = true }

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.feature.python-313.dependencies]
python = "3.13.*"

[tool.pixi.feature.python-314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-xdist = "*"
pytest-doctestplus = "*"
pytest-remotedata = "*"

[tool.pixi.feature.test.tasks]
doctest = "pytest -n auto --doctest-modules unitpackage"

[tool.pixi.feature.lint.dependencies]
black = "*"
isort = "*"
pylint = "*"

[tool.pixi.feature.dev.tasks]
test = "pixi run doctest"

[tool.pixi.feature.lint.tasks]
pylint = "pylint unitpackage"
black = "black unitpackage"
isort = "isort --profile black unitpackage"
lint = { depends-on = ["pylint", "black", "isort"] }

[tool.pixi.feature.doc.dependencies]
jupytext = "*"
make = "*"
myst-parser = "*"
myst-nb = "*"
sphinx = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.doc.pypi-options.dependency-overrides]
plotly = ">=5,<6"

[tool.pixi.feature.doc.tasks]
doc = "cd doc && make html SPHINXOPTS='-j auto -W -n --keep-going'"
linkcheck = "cd doc && make linkcheck"

[tool.pixi.feature.dev.dependencies]
pip = "*"
conda = "*"
jupyterlab = "*"

[tool.pixi.feature.release.tasks]
# To create a new release, run `pixi run rever X.Y.Z`
rever = { args = [ { "arg" = "version", "default" = "--help" } ],cmd = "rever {{ version }}" }

[tool.pixi.feature.release.dependencies]
twine = "*"
rever = "*"
make = "*"

[tool.pixi.feature.release.pypi-dependencies]
build = "*"

[tool.pytest.ini_options]
env = [
    "MPLBACKEND=Agg"
]
